--- a/picPlay-list.html
+++ b/picPlay-list.html
@@ -78,6 +78,9 @@
 		<dl id="menu-picPlay">
 			<dt><i class="Hui-iconfont">&#xe68d;</i> <a href="picPlay-list.html" title="轮播图管理"> 轮播图管理</a></dt>
 		</dl>
+		<dl id="menu-customer-shop">
+			<dt><i class="Hui-iconfont">&#xe68d;</i> <a href="customer-shop-list.html" title="门店信息审核"> 门店信息审核</a></dt>
+		</dl>
 	</div>
 </aside>
 <div class="dislpayArrow hidden-xs"><a class="pngfix" href="javascript:void(0);" onClick="displaynavbar(this)"></a></div>
