--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
         <dl id="menu-picPlay">
             <dt><i class="Hui-iconfont">&#xe68d;</i> <a href="picPlay-list.html" title="轮播图管理"> 轮播图管理</a></dt>
         </dl>
+		<dl id="menu-customer-shop">
+			<dt><i class="Hui-iconfont">&#xe68d;</i> <a href="customer-shop-list.html" title="门店信息审核"> 门店信息审核</a></dt>
+		</dl>
 <!--		<dl id="menu-comments">-->
 <!--			<dt><i class="Hui-iconfont">&#xe622;</i> 评论管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>-->
 <!--			<dd>-->
