--- a/goods-edit.html
+++ b/goods-edit.html
@@ -184,6 +184,8 @@
 <script type="text/javascript" src="lib/jquery.validation/1.14.0/messages_zh.js"></script> 
 <script type="text/javascript" src="static/h-ui/js/H-ui.js"></script> 
 <script type="text/javascript" src="static/h-ui.admin/js/H-ui.admin.page.js"></script>
+<script type="text/javascript" src="lib/jquery/bootstrap-datetimepicker.min.js"></script>
+<script type="text/javascript" src="lib/jquery/bootstrap-datetimepicker.zh-CN.js"></script>
 <script type="text/javascript" src="lib/jquery/common.js"></script>
 
 <!--/_footer /作为公共模版分离出去-->
